fix buttons covering 2 cols at very large screens

--- a/src/components/Hero/CenteredContent/index.module.scss
+++ b/src/components/Hero/CenteredContent/index.module.scss
@@ -46,4 +46,9 @@
 .links {
   display: flex;
   flex-direction: column;
+  max-width: 50%;
+
+  @include large-break {
+    max-width: none;
+  }
 }
